2001-09-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/imfs/Makefile.am: Revamp INCLUDES handling to make automake-1.5
	happy.

2001-08-09	Fernando-Ruiz Casas <correo@fernando-ruiz.com>

	* src/imfs/imfs_eval.c: The CD_UP problem in imfs_eval has been
	touched. The order of the questions is the key.

2001-07-06	Thomas Doerfler <Thomas.Doerfler@imd-systems.de>

	* src/imfs/deviceio.c: Make sure errno gets set to reflect
	the status from the driver.

2001-05-25	Joel Sherrill <joel@OARcorp.com>

 	* src/imfs/imfs_initsupp.c: Create the root node with the
	desired permissions.  Nodes should be created with the right
	permissions because chmod() is not supported by the miniIMFS
	so changing after creation is not possible.

2001-04-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in: Add [-ansi -fasm] to RTEMS_PROG_CC_FOR_TARGET.

2001-04-24	Joel Sherrill <joel@OARcorp.com>

 	* src/imfs/memfile.c (memfile_open): Did not set iop->size
	and thus the value was incorrect.  Before this field was cleared,
	this resulted in the value from the last time that IOP was used
	being still in place.  Discovered by  Andrew Bythell
	<abythell@nortelnetworks.com>.

2001-04-20	Joel Sherrill <joel@OARcorp.com>

	* src/imfs/imfs_debug.c (IMFS_print_jnode): Modified to print
	only information that does not vary based on target or memory
	configuration.  The old prints are still there in case they
	are needed in the future to debug.  Printing target dependent
	addresses makes the test output vary by target unnecessarily.

2001-03-23	Joel Sherrill <joel@OARcorp.com>

	* src/imfs/memfile.c: Reapply fix from bug report from
	Jose Sturniolo <jsturnio@nec.com.ar> where NULL pointer
	was dereferenced when freeing a triply indirect file.  
	The fix was applied to the 4.5 release branch and not
	the development branch.

2001-02-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/imfs/Makefile.am: Apply include_*HEADERS instead of H_FILES.
