@@ -1,3 +1,7 @@
+2001-09-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* src/imfs/Makefile.am: Use 'PREINSTALL_FILES ='.
+
 2001-09-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* src/imfs/Makefile.am: Revamp INCLUDES handling to make automake-1.5
